mediawiki/chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediawiki
  labels:
    app: mediawiki
spec:
  selector:
    app: mediawiki
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
