mediawiki/chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediawiki
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mediawiki.deployment.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mediawiki
                port:
                  number: 80
  tls: []
